[gd_scene load_steps=9 format=2]

[ext_resource path="res://Cenas/Fontes/FonteComicSansMS.tscn" type="PackedScene" id=1]
[ext_resource path="res://Elementos/Textuais/ComicSansMS/comic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Codigos/Objetos/CorpoHumanoPeca.gd" type="Script" id=3]
[ext_resource path="res://Elementos/Sonoros/Clicar/Peca.wav" type="AudioStream" id=4]
[ext_resource path="res://Elementos/Sonoros/Notificar/Erro-2.wav" type="AudioStream" id=5]
[ext_resource path="res://Elementos/Sonoros/Notificar/Acerto-1.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 38
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 109, 17.2803 )

[node name="CorpoHumanoPeca" type="ColorRect"]
margin_right = 250.0
margin_bottom = 80.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
Nome = "ParteCorpo"

[node name="Contorno" type="ReferenceRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -40.0
margin_right = 125.0
margin_bottom = 40.0
mouse_filter = 1
border_color = Color( 0, 0, 0, 1 )
border_width = 5.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" parent="." instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ParteCorpo"
align = 1
valign = 1

[node name="Som" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Area" type="Area2D" parent="."]
position = Vector2( 125, 40 )

[node name="Contato" type="CollisionShape2D" parent="Area"]
shape = SubResource( 2 )

[node name="AudioAcerto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="AudioErro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="gui_input" from="Contorno" to="." method="_arrastarPeca"]
[connection signal="area_entered" from="Area" to="." method="_AreaEntrou"]
[connection signal="area_exited" from="Area" to="." method="_AreaSaiu"]
